Versión 1: Muestra para el cliente
Maqueta sencilla.
No tiene PHP, ni DB, ni envío de mail.

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" id="mainNav">
                         <li class="active"><a href="#home" class="scroll-link">Inicio</a></li>
-                        <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
-                        <li><a href="#skills" class="scroll-link">Skills</a></li>
-                        <li><a href="#experience" class="scroll-link">Experience</a></li>
-                        <li><a href="#portfolio" class="scroll-link">Portfolio</a></li>
-                        <li><a href="#contactUs" class="scroll-link">Contact Us</a></li>
+                        <li><a href="#introText" class="scroll-link">Quienes somos</a></li>
+                        <li><a href="#portfolio" class="scroll-link">Propiedades Destacadas</a></li>
+                        <li><a href="#contactUs" class="scroll-link">Contacto</a></li>
                     </ul>
                 </div>
                 <!--/.navbar-collapse-->
@@ -92,7 +90,7 @@
     <section id="introText">
         <div class="container">
             <div class="text-center">
-            <h1>Doña Martillerita Propiedades</h1>
+            <h1>Silvana Propiedades</h1>
               <p>Nos especializamos en gestionar operaciones inmobiliarias, con la finalidad principal de satisfacer a nuestros clientes, ya sea tasación venta-compra o alquiler.</p>
               <p>Llámenos al 54 11 1234-5678 / 54 11 1234-1111 ó escríbanos a info@algunmail.com</p>
             </div>
@@ -124,10 +122,10 @@
 
                             <article class="col-sm-4 isotopeItem venta">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img1.jpg" alt="" />
+                                    <img src="images/portfolio/depto-3amb-720x550.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img1.jpg" class="fancybox">
+                                            <a href="images/portfolio/depto-3amb-720x550.jpg" class="fancybox">
                                                 <h5>Depto 3 amb</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i>
                                             </a>
@@ -138,10 +136,10 @@
 
                             <article class="col-sm-4 isotopeItem alquiler">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img2.jpg" alt="" />
+                                    <img src="images/portfolio/depto-1amb-720x550.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img2.jpg" class="fancybox">
+                                            <a href="images/portfolio/depto-1amb-720x550.jpg" class="fancybox">
                                                 <h5>depto 1 amb</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i>
                                             </a>
@@ -153,10 +151,10 @@
 
                             <article class="col-sm-4 isotopeItem alquiler">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img3.jpg" alt="" />
+                                    <img src="images/portfolio/casa-4amb-720x550.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img3.jpg" class="fancybox">
+                                            <a href="images/portfolio/casa-4amb-720x550.jpg" class="fancybox">
                                                 <h5>casa 4 amb</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i>
                                             </a>
@@ -167,10 +165,10 @@
 
                             <article class="col-sm-4 isotopeItem venta">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img4.jpg" alt="" />
+                                    <img src="images/portfolio/casa-antigua-720x550.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img4.jpg" class="fancybox">
+                                            <a href="images/portfolio/casa-antigua-720x550.jpg" class="fancybox">
                                                 <h5>casa antigua</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i>
                                             </a>
@@ -181,10 +179,10 @@
 
                             <article class="col-sm-4 isotopeItem alquiler">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img5.jpg" alt="" />
+                                    <img src="images/portfolio/depto-2amb-720x550.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img5.jpg" class="fancybox">
+                                            <a href="images/portfolio/depto-2amb-720x550.jpg" class="fancybox">
                                                 <h5>depto 2 amb</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i>
                                             </a>
@@ -242,16 +240,14 @@
                 <div class="col-sm-4">
                     <h4>Dirección:</h4>
                     <address>
-                        WebThemez Company<br>
-                        134 Stilla. Tae., 414515<br>
-                        Leorislon, SA 02434-34534 USA
-                        <br>
+                        Silvana Propiedades<br>
+                        Av. De Mayo 1234, CABA<br>
                     </address>
                 </div>
                 <div class="col-sm-4">
-                    <h4>Phone:</h4>
+                    <h4>Teléfonos:</h4>
                     <address>
-                        12345-49589-2<br>
+                        54 11 1234-5678 / 54 11 1234-1111<br>
                     </address>
                 </div>
             </div>
@@ -263,9 +259,11 @@
             <div class="social text-center">
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
+                <!--
                 <a href="#"><i class="fa fa-dribbble"></i></a>
                 <a href="#"><i class="fa fa-flickr"></i></a>
                 <a href="#"><i class="fa fa-github"></i></a>
+                -->
             </div>
 
             <div class="clear"></div>
@@ -277,7 +275,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    Copyright 2014 | All Rights Reserved  -- Template by <a href="http://webThemez.com">WebThemez.com</a>
+
+
                 </div>
             </div>
             <!-- / .row -->
