Versión 1.2: Muestra para el cliente
Corregí algo de ortografía.

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <div class="container">
             <div class="text-center">
             <h1>Silvana Propiedades</h1>
-              <p>Nos especializamos en gestionar operaciones inmobiliarias, con la finalidad principal de satisfacer a nuestros clientes, ya sea tasación venta-compra o alquiler.</p>
-              <p>Llámenos al 54 11 1234-5678 / 54 11 1234-1111 ó escríbanos a info@algunmail.com</p>
+              <p>Nos especializamos en gestionar operaciones inmobiliarias, con la finalidad principal de satisfacer a nuestros clientes, ya sea tasación compra-venta o alquiler.</p>
+              <p>Llámenos al 54 11 1234-5678 / 54 11 1234-1111 o escríbanos a info@algunmail.com</p>
             </div>
         </div>
 
