Versión 1.3: Muestra para el cliente
Agregué la casa hobbit porque no podía faltar.

--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@
                                     </div>
                                 </div>
                             </article>
+                            
+                            <article class="col-sm-4 isotopeItem venta">
+                                <div class="portfolio-item">
+                                    <img src="images/portfolio/casa-hobbit-720x550.jpg" alt="" />
+                                    <div class="portfolio-desc align-center">
+                                        <div class="folio-info">
+                                            <a href="images/portfolio/casa-hobbit-720x550.jpg" class="fancybox">
+                                                <h5>casa de campo</h5>
+                                                <i class="fa fa-arrows-alt fa-2x"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
 
                         </div>
                     </div>
