--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-    <title>Maqueta nro. 1</title>
+    <title>Silvana Propiedades</title>
     <meta name="description" content="">
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top logo"><b>Maqueta nro. 1</b></a>
+                    <a href="#" class="navbar-brand scroll-top logo"><b>Silvana Propiedades</b></a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
