--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" id="mainNav">
                         <li class="active"><a href="#home" class="scroll-link">Inicio</a></li>
-                        <li><a href="#introText" class="scroll-link">Quienes somos</a></li>
-                        <li><a href="#portfolio" class="scroll-link">Propiedades Destacadas</a></li>
+                        <li><a href="#portfolio" class="scroll-link">Propiedades</a></li>
+                        <li><a href="#introText" class="scroll-link">Nosotros</a></li>
                         <li><a href="#contactUs" class="scroll-link">Contacto</a></li>
                     </ul>
                 </div>
@@ -84,18 +84,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-
-    <section id="introText">
-        <div class="container">
-            <div class="text-center">
-            <h1>Silvana Propiedades</h1>
-              <p>Nos especializamos en gestionar operaciones inmobiliarias, con la finalidad principal de satisfacer a nuestros clientes, ya sea tasación compra-venta o alquiler.</p>
-              <p>Llámenos al 54 11 1234-5678 / 54 11 1234-1111 o escríbanos a info@algunmail.com</p>
-            </div>
-        </div>
-
     </section>
 
     <!--Portfolio-->
@@ -209,6 +197,16 @@
                     </div>
 
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="introText">
+        <div class="container">
+            <div class="text-center">
+            <h1>Silvana Propiedades</h1>
+              <p>Nos especializamos en gestionar operaciones inmobiliarias, con la finalidad principal de satisfacer a nuestros clientes, ya sea tasación compra-venta o alquiler.</p>
+              <p>Llámenos al 54 11 1234-5678 / 54 11 1234-1111 o escríbanos a info@algunmail.com</p>
             </div>
         </div>
     </section>
