--- a/partes/navDetalle.html
+++ b/partes/navDetalle.html
@@ -10,7 +10,9 @@
 <!--/.navbar-header-->
 <div id="main-nav" class="collapse navbar-collapse">
     <ul class="nav navbar-nav" id="mainNav">
-        <li class="active"><a onclick="MostrarHeader('MostrarHeaderInicio');Mostrar('MostrarInicio');">Inicio</a></li>
+        <!--<li class="active"><a onclick="MostrarHeader('MostrarHeaderInicio');Mostrar('MostrarInicio');">Inicio</a></li>-->
+        <li class="active"><a href="index.php">Inicio</a></li>
+        <li class="active"><a href="propiedades.php">Listado</a></li>
     </ul>
 </div>
 <!--/.navbar-collapse-->
