--- a/partes/navDetalle.html
+++ b/partes/navDetalle.html
@@ -12,7 +12,7 @@
     <ul class="nav navbar-nav" id="mainNav">
         <!--<li class="active"><a onclick="MostrarHeader('MostrarHeaderInicio');Mostrar('MostrarInicio');">Inicio</a></li>-->
         <li class="active"><a href="index.php">Inicio</a></li>
-        <li class="active"><a href="propiedades.php">Listado</a></li>
+        <!--<li class="active"><a href="propiedades.php">Listado</a></li>-->
     </ul>
 </div>
 <!--/.navbar-collapse-->
