Versión 4.1: Haciendo funcionar la carga
Me voy a dormir....ZZzzzz

--- a/partes/navCarga.html
+++ b/partes/navCarga.html
@@ -10,12 +10,9 @@
 <!--/.navbar-header-->
 <div id="main-nav" class="collapse navbar-collapse">
     <ul class="nav navbar-nav" id="mainNav">
-        <li class="active"><a href="#home" class="scroll-link">Inicio</a></li>
-        <li><a href="#portfolio" class="scroll-link">Propiedades</a></li>
-        <li><a href="#introText" class="scroll-link">Nosotros</a></li>
-        <li><a href="#contactUs" class="scroll-link">Contacto</a></li>
-        
-        <li onclick="MostrarHeader('MostrarHeaderCarga');MostrarFormCarga(null)" class="scroll-link">Carga</li>
+        <!--<li class="active"><a onclick="MostrarHeader('MostrarHeaderInicio');Mostrar('MostrarInicio');">Inicio</a></li>-->
+        <li class="active"><a href="index.php">Inicio</a></li>
+        <li><a href="" onclick="MostrarHeader('MostrarHeaderCarga');MostrarFormCarga(null)" class="scroll-link">Carga</a></li>
     </ul>
 </div>
 <!--/.navbar-collapse-->
