--- a/partes/navListado.html
+++ b/partes/navListado.html
@@ -5,7 +5,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <a href="#" class="navbar-brand scroll-top logo"><b>Silvana Propiedades</b></a>
+    <a href="#" class="navbar-brand scroll-top logo" style="padding: 0"><img src="./images/Logo_SILMAR_Small.png" style="height: 50px;"></a>
 </div>
 <!--/.navbar-header-->
 <div id="main-nav" class="collapse navbar-collapse">
