Versión 6: Entrega al cliente

--- a/partes/navInicio.html
+++ b/partes/navInicio.html
@@ -15,7 +15,7 @@
         <li><a href="#introText" class="scroll-link">Nosotros</a></li>
         <li><a href="#contactUs" class="scroll-link">Contacto</a></li>
         
-        <li onclick="MostrarHeader('MostrarHeaderCarga');MostrarFormCarga(null)" class="scroll-link">Carga</li>
+        <li onclick="MostrarHeader('MostrarHeaderCarga');MostrarFormCarga(null)" class="scroll-link"><label class="fa fa-user"></label></li>
     </ul>
 </div>
 <!--/.navbar-collapse-->
